--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+* Version 1.3.1 (unreleased)
+- Fixed issues with PAM authentication when combined with pam_sssd (#618)
+
+
 * Version 1.3.0 (released 2024-05-05)
 - Switch to https://github.com/nodejs/llhttp from http-parser.
   http-parser was a liability as an unmaintained project (#598)
