--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 * Version 1.3.1 (unreleased)
 - Fixed issues with PAM authentication when combined with pam_sssd (#618)
-
+- Enhanced the seccomp filters to address issue in testing (#627)
 
 * Version 1.3.0 (released 2024-05-05)
 - Switch to https://github.com/nodejs/llhttp from http-parser.
